--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
       <h2>Project Portal</h2>
       <ul>
-        <li><a href="#">Project 1</a></li>
+        <li><a href="musicnook/index.html">Interactive HTML & CSS Project </a></li>
         <li><a href="#">Project 2</a></li>
         <li><a href="#">Project 3</a></li>
       </ul>
@@ -23,7 +23,7 @@
             <h2>Interactive Html & CSS Project</h2>
           </div>
           <div class="card-back">
-            <a href="./musicnook/index.html">Music Nook</a>
+            <a href="musicnook/index.html">Music Nook</a>
           </div>
         </div>
       </div>
