--- a/index.html
+++ b/index.html
@@ -15,21 +15,9 @@
         <li><a href="#">Project 3</a></li>
       </ul>
     </nav>
-    <!--Cards Container-->
     <div class="cards">
-      <div class="card">
-        <div class="card-inner">
-          <div class="card-front">
-            <h2>Interactive Html & CSS Project</h2>
-          </div>
-          <div class="card-back">
-            <a href="musicnook/index.html">Music Nook</a>
-          </div>
-        </div>
       </div>
-      <!--Container End-->
     </div>
-    <!--Footer-->
     <footer class="bg-dark">
       &copy; <span id="year"></span> | Biaga Thomas | Utah
       <a
@@ -44,5 +32,6 @@
       Last Updated: <span id="date"><span id="year"></span>
     </footer>
     <script src="script.js"></script>
+    <script src="cards.js"></script>
   </body>
 </html>
