--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <h2>Project Portal</h2>
       <ul>
         <li><a href="musicnook/index.html">Interactive HTML & CSS Project </a></li>
-        <li><a href="#">Project 2</a></li>
-        <li><a href="#">Project 3</a></li>
+        <li><a href="memory-game/index.html">Memory Game</a></li>
+        <li><a href="restauraunts/index.html">Business Directory</a></li>
       </ul>
     </nav>
     <div class="cards">
